[project]
name = "simple-mcp-calculator"
version = "1.0.0"
description = "Simple MCP Server Template with Calculator Tools"
authors = ["MCP Template"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "fastmcp>=0.4.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[project.scripts]
mcp-calculator-stdio = "main:main"
mcp-calculator-http = "http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]
